# anime-cli-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
src/: BittorrentClient.cpp  BittorrentClient.hpp  ffi-data.cpp  ffi-data.hpp  libtorrent-ffi.cpp  libtorrent-ffi.hpp  main.rs
