[package]
name = "anime-cli-rs"
version = "0.1.0"
edition = "2021"
authors = ["Erick Vilcia erick.vilcica@protonmail.com"]
description = "A tool for searching and streaming anime from the cli."
readme = "README.md"
repository = "https://github.com/rederick29/anime-cli-rs"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["gzip", "default-tls" ] }
tokio = { version = "1.19.2", features = ["full"] }
scraper = "0.13.0"

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"