[package]
name = "anime-cli-rs"
version = "0.4.0"
edition = "2021"
authors = ["Erick Vilcia erick.vilcica@protonmail.com"]
description = "A tool for searching and streaming anime from the cli."
readme = "README.md"
repository = "https://github.com/rederick29/anime-cli-rs"
license = "GPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["gzip", "default-tls", "blocking"] }
scraper = "0.23"
clap = { version = "4.5", features = ["derive", "unicode"] }
bytesize = "2.0"

[build-dependencies]
cc = "1.2"
